--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -17,6 +17,13 @@ $colBlue : #86AEEB;
 $colBlueHover : #7da5e1;
 $colGrayBg : #f4f5f7;
 
+//Element UI 
+$colElePrimary : #409EFF;
+$colEleSuccess : #67C23A;
+$colEleWarning : #E6A23C;
+$colEleDanger : #F56C6C;
+$colEleInfo : #909399;
+
 //text
 $textCol1 : #111;
 $textCol2 : #888;
