--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -292,7 +292,7 @@
           padding-top: 37px;
           font-size: 1.2rem;
 
-          @for $i from 1 to 10 {
+          @for $i from 1 to 13 {
             &-#{$i} {
               background-image:url(~/static/images/icon/menu_#{$i}.png);
             }
@@ -307,7 +307,11 @@
               color: $colSub;
             }
 
-            @for $i from 1 to 10 {
+            &.icon-11{
+              filter:invert(1);
+            }
+
+            @for $i from 1 to 11 {
               &-#{$i} {
                 background-image:url(~/static/images/icon/menu_#{$i}_active.png);
               }
@@ -825,7 +829,7 @@
 
       &-save {
         font-size: 1.2rem;
-        margin-top: 15px;
+        margin-top: 25px;
 
         &.left {
           margin-left: -75px;
@@ -2029,7 +2033,7 @@
   &-tit {
     font-size: 1.5rem;
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     font-weight: 500;
   }
 
