--- a/assets/common.scss
+++ b/assets/common.scss
@@ -3565,11 +3565,11 @@ button:disabled {
   }
   .el-dialog__wrapper {
     padding: 0 15px;
+    .el-dialog {
+      max-width: 800px!important;
+      width: 100%!important;
+    }
     .modal-container {
-      .el-dialog {
-        max-width: 800px;
-        width: 100%!important;
-      }
       .tit {
         padding-bottom: 20px;
         border-bottom: 1px solid $colPrimary;
@@ -3588,7 +3588,8 @@ button:disabled {
           width: 250px;
           border-radius: 4px;
           border: 1px solid #c0c4cc;
-          box-sizing: border-box;
+          -webkit-box-sizing: border-box;
+                  box-sizing: border-box;
           color: #606266;
           display: inline-block;
           font-size: inherit;
@@ -3596,10 +3597,32 @@ button:disabled {
           line-height: 40px;
           outline: none;
           padding: 0 15px;
+          -webkit-transition: border-color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
+          -o-transition: border-color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
           transition: border-color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
       
           &:focus {
             outline: 1px solid $colPrimary;
+          }
+      
+          &::-webkit-input-placeholder {
+            color: #ccc;
+            font-weight: 300;
+          }
+      
+          &::-moz-placeholder {
+            color: #ccc;
+            font-weight: 300;
+          }
+      
+          &:-ms-input-placeholder {
+            color: #ccc;
+            font-weight: 300;
+          }
+      
+          &::-ms-input-placeholder {
+            color: #ccc;
+            font-weight: 300;
           }
       
           &::placeholder {
@@ -3623,11 +3646,18 @@ button:disabled {
   }
   @media (max-width: 500px) {
     .el-dialog__wrapper {
+      .el-dialog {
+        width: 100%!important;
+      }
       .modal-container {
         .main {
           margin: 20px 0;
+          display: -webkit-box;
+          display: -ms-flexbox;
           display: flex;
-          align-items: center;
+          -webkit-box-align: center;
+              -ms-flex-align: center;
+                  align-items: center;
           .el-select {
             width: 250px;
           }
