--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -2675,6 +2675,45 @@
     }
   }
 
+  &-credit{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position:absolute;
+    left:19px;
+    top:15px;
+    background-color:#000;
+    width: calc(100% - 36px);
+    height: calc(100% - 30px);
+    z-index: 1;
+    .scroll{
+      height: 70%;
+      overflow: auto;
+      user-select: none;
+      pointer-events: none;
+    }
+
+    &--tit{
+      color:#fff;
+      font-size:2rem;
+      text-align: center;
+      font-weight: 600;
+      margin:30px 0;
+    }
+    &--name{
+      display:flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      span{
+        color:#fff;
+        font-size:1.4rem;
+        margin:10px 0;
+      }
+    }
+  }
+
   @media (max-width: 800px) {
     width: 100%;
     height: 100%;
