--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -2723,6 +2723,14 @@
       width: 100%;
       height: 100%;
     }
+
+    &-credit{
+      width:100%;
+      height:100%;
+      left:0;
+      top:0;
+      border-radius: 0;
+    }
   }
 }
 
